--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,1 +1,32 @@
-<app-footer></app-footer>
+<mosaic-row>
+  <mosaic-col>
+    <mosaic-card routerLink="/cpa-manager">
+      <mosaic-card-body>
+        <h4>cpa Manager</h4>
+        <div>
+          content
+        </div>
+      </mosaic-card-body>
+    </mosaic-card>
+  </mosaic-col>
+  <mosaic-col>
+    <mosaic-card routerLink="/tag-manager">
+      <mosaic-card-body>
+        <h4>tag Manager</h4>
+        <div>
+          content
+        </div>
+      </mosaic-card-body>
+    </mosaic-card>
+  </mosaic-col>
+  <mosaic-col>
+    <mosaic-card routerLink="/contract-reference-manager">
+      <mosaic-card-body>
+        <h4>contract reference Manager</h4>
+        <div>
+          content
+        </div>
+      </mosaic-card-body>
+    </mosaic-card>
+  </mosaic-col>
+</mosaic-row>
